Fix issue with layout content overflow

--- a/frontend/app/styles/globals.scss
+++ b/frontend/app/styles/globals.scss
@@ -47,14 +47,11 @@ h3 {
 .container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	width: 100%;
 	height: 100%;
 	padding: 1em;
 	text-align: center;
-	margin-top: auto;
-	margin-bottom: auto;
 	overflow: auto;
 
 	background: rgba(255, 255, 255, 0.62);
@@ -62,6 +59,14 @@ h3 {
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 	backdrop-filter: blur(7.5px);
 	-webkit-backdrop-filter: blur(7.5px);
+
+	& > :first-child {
+		margin-top: auto;
+	}
+
+	& > :last-child {
+		margin-bottom: auto;
+	}
 }
 
 form {
